--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "express-validator": "*",
     "passport": "*",
     "passport-http": "*",
-    "passport-local": "*",
-    "flash": "*"
+    "passport-local": "*"
   },
   "devDependencies": {}
 }
