--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "*",
     "connect-flash": "*",
     "cookie-parser": "^1.4.1",
+    "cookie-session": "*",
     "express-handlebars": "*",
     "express-messages": "*",
     "express-session": "*",
