--- a/package.json
+++ b/package.json
@@ -11,22 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "nodemon": "^1.18.4",
-    "cors": "^2.8.4",
-    "mongojs": "^2.6.0",
     "bcryptjs": "*",
     "body-parser": "*",
-    "connect-flash": "*",
+    "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.1",
-    "cookie-session": "*",
-    "express-handlebars": "*",
-    "express-messages": "*",
-    "express-session": "*",
-    "express-validator": "*",
-    "passport": "*",
-    "passport-http": "*",
-    "passport-local": "*"
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "http": "0.0.0",
+    "mongojs": "^2.6.0"
   },
   "devDependencies": {}
 }
